test/libsolidity/syntaxTests/nameAndTypeResolution/265_new_for_non_array.sol
contract C {
    function f(uint size) public {
        uint[] storage x = new uint(7);
    }
}
// ----
// TypeError: (75-83): Contract or array type expected.
